GearsetPOC/force-app/main/default/objects/FAQ_Category_Data__c/FAQ_Category_Data__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>FAQ Category Data</label>
</CustomObject>