GearsetPOC/force-app/main/default/objects/FAQ_Category_Data__c/fields/Category_Image__c.field-meta.xml
<CustomField>
    <fullName>Category_Image__c</fullName>
    <label>Category_Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>