GearsetPOC/force-app/main/default/objects/FAQ_Category_Data__c/fields/Category_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Unique_Name__c</fullName>
    <description>The Category Name as in -&gt; set in up -&gt; in Data Categories</description>
    <label>Category Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>