GearsetPOC/force-app/main/default/objects/FAQ_Category_Data__c/fields/Dutch_Description__c.field-meta.xml
<CustomField>
    <fullName>Dutch_Description__c</fullName>
    <label>Dutch Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>