GearsetPOC/force-app/main/default/objects/FAQ_Category_Data__c/fields/Dutch_URL_Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>Dutch_URL_Friendly_Name__c</fullName>
    <description>URL Friendly name for this category in Dutch.</description>
    <label>Dutch URL Friendly Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>