GearsetPOC/force-app/main/default/objects/FAQ_Category_Data__c/fields/English_URL_Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>English_URL_Friendly_Name__c</fullName>
    <label>English URL Friendly Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>