GearsetPOC/force-app/main/default/objects/FAQ_Category_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category_Unique_Name__c</columns>
    <columns>English_Description__c</columns>
    <columns>French_Description__c</columns>
    <columns>Dutch_Description__c</columns>
    <columns>German_Description__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>English_URL_Friendly_Name__c</columns>
    <columns>French_URL_Friendly_Name__c</columns>
    <columns>Dutch_URL_Friendly_Name__c</columns>
    <columns>German_URL_Friendly_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>